# qtxmlpatterns

./: .qmake.conf  CMakeLists.txt  ReadMe.md  qtxmlpatterns.pro
examples/xmlpatterns/filetree/: filetree.cpp
src/imports/xmllistmodel/: plugin.cpp  qqmlxmllistmodel.cpp
src/xmlpatterns/: xmlpatterns.pro
src/xmlpatterns/acceltree/: qacceliterators_p.h  qacceltree.cpp  qacceltree_p.h  qacceltreebuilder_p.h  qacceltreebuilder_tpl_p.h  qacceltreeresourceloader.cpp  qacceltreeresourceloader_p.h  qcompressedwhitespace.cpp  qcompressedwhitespace_p.h
src/xmlpatterns/api/: api.pri  qabstractmessagehandler.h  qabstracturiresolver.h  qabstractxmlforwarditerator_p.h  qabstractxmlnodemodel.cpp  qabstractxmlnodemodel.h  qabstractxmlreceiver.cpp  qabstractxmlreceiver.h  qcoloringmessagehandler.cpp  qcoloringmessagehandler_p.h  qcoloroutput.cpp  qdeviceresourceloader_p.h  qnetworkaccessdelegator.cpp  qpullbridge_p.h  qresourcedelegator_p.h  qsimplexmlnodemodel.cpp  qsimplexmlnodemodel.h  qsourcelocation.cpp  qsourcelocation.h  qtxmlpatternsglobal.h  quriloader.cpp  quriloader_p.h  qvariableloader.cpp  qvariableloader_p.h  qxmlformatter.cpp  qxmlformatter.h  qxmlname.cpp  qxmlname.h  qxmlnamepool.h  qxmlquery.cpp  qxmlquery.h  qxmlquery_p.h  qxmlresultitems.h  qxmlresultitems_p.h  qxmlschema.h  qxmlschema_p.h  qxmlschemavalidator.h  qxmlschemavalidator_p.h  qxmlserializer.cpp  qxmlserializer.h  (+1 more)
src/xmlpatterns/data/: qabstractdatetime.cpp  qabstractdatetime_p.h  qabstractduration.cpp  qabstractduration_p.h  qabstractfloat_p.h  qabstractfloat_tpl_p.h  qabstractfloatcasters_p.h  qabstractfloatmathematician_p.h  qanyuri_p.h  qatomiccaster_p.h  qatomiccasters_p.h  qatomiccomparator.cpp  qatomiccomparator_p.h  qatomiccomparators_p.h  qatomicmathematician.cpp  qatomicmathematician_p.h  qatomicmathematicians_p.h  qatomicstring_p.h  qatomicvalue.cpp  qbase64binary_p.h  qboolean.cpp  qboolean_p.h  qcommonvalues.cpp  qcommonvalues_p.h  qcomparisonfactory_p.h  qdate.cpp  qdate_p.h  qdaytimeduration.cpp  qdaytimeduration_p.h  qdecimal.cpp  qdecimal_p.h  qderivedinteger_p.h  qderivedstring_p.h  qduration.cpp  qduration_p.h  qgday.cpp  qgday_p.h  qgmonth.cpp  qgmonth_p.h  qgmonthday.cpp  (+26 more)
src/xmlpatterns/environment/: createReportContext.xsl  qcurrentitemcontext_p.h  qdelegatingdynamiccontext_p.h  qdelegatingstaticcontext_p.h  qdynamiccontext_p.h  qfocus_p.h  qgenericdynamiccontext_p.h  qgenericstaticcontext.cpp  qgenericstaticcontext_p.h  qreceiverdynamiccontext_p.h  qreportcontext.cpp  qreportcontext_p.h  qstackcontextbase_p.h  qstaticbaseuricontext_p.h  qstaticcompatibilitycontext_p.h  qstaticcontext_p.h  qstaticcurrentcontext_p.h  qstaticfocuscontext_p.h  qstaticnamespacecontext_p.h
src/xmlpatterns/expr/: qandexpression_p.h  qapplytemplate_p.h  qargumentreference_p.h  qarithmeticexpression_p.h  qattributeconstructor.cpp  qattributeconstructor_p.h  qattributenamevalidator_p.h  qaxisstep_p.h  qcachecells_p.h  qcallsite_p.h  qcalltargetdescription_p.h  qcalltemplate_p.h  qcastableas_p.h  qcastas_p.h  qcastingplatform_p.h  qcollationchecker_p.h  qcombinenodes.cpp  qcombinenodes_p.h  qcommentconstructor.cpp  qcommentconstructor_p.h  qcomparisonplatform_p.h  qcomputednamespaceconstructor_p.h  qcontextitem_p.h  qcopyof_p.h  qcurrentitemstore_p.h  qdocumentconstructor_p.h  qdocumentcontentvalidator.cpp  qdocumentcontentvalidator_p.h  qdynamiccontextstore_p.h  qelementconstructor_p.h  qemptycontainer_p.h  qemptysequence_p.h  qevaluationcache_p.h  qexpression_p.h  qexpressionfactory_p.h  qexpressionsequence_p.h  qexpressionvariablereference_p.h  qexternalvariableloader_p.h  qexternalvariablereference_p.h  qfirstitempredicate_p.h  (+58 more)
src/xmlpatterns/functions/: qabstractfunctionfactory_p.h  qaccessorfns_p.h  qaggregatefns_p.h  qaggregator_p.h  qassemblestringfns.cpp  qassemblestringfns_p.h  qbooleanfns_p.h  qcomparescaseaware_p.h  qcomparestringfns_p.h  qcomparingaggregator_p.h  qconstructorfunctionsfactory_p.h  qcontextfns_p.h  qcontextnodechecker_p.h  qcurrentfn_p.h  qdatetimefn_p.h  qdatetimefns_p.h  qdeepequalfn_p.h  qdocumentfn_p.h  qelementavailablefn.cpp  qelementavailablefn_p.h  qerrorfn_p.h  qfunctionargument_p.h  qfunctionavailablefn_p.h  qfunctioncall_p.h  qfunctionfactory_p.h  qfunctionfactorycollection_p.h  qfunctionsignature.cpp  qfunctionsignature_p.h  qgenerateidfn_p.h  qnodefns_p.h  qnumericfns_p.h  qpatternmatchingfns.cpp  qpatternmatchingfns_p.h  qpatternplatform.cpp  qpatternplatform_p.h  qqnamefns_p.h  qresolveurifn_p.h  qsequencefns_p.h  qsequencegeneratingfns_p.h  qstaticbaseuricontainer_p.h  (+16 more)
src/xmlpatterns/iterators/: qcachingiterator_p.h  qdeduplicateiterator_p.h  qdistinctiterator_p.h  qemptyiterator_p.h  qexceptiterator_p.h  qindexofiterator_p.h  qinsertioniterator_p.h  qintersectiterator_p.h  qitemmappingiterator_p.h  qrangeiterator_p.h  qremovaliterator_p.h  qsequencemappingiterator_p.h  qsingletoniterator_p.h  qsubsequenceiterator_p.h  qtocodepointsiterator_p.h  qunioniterator_p.h
src/xmlpatterns/janitors/: qargumentconverter_p.h  qatomizer_p.h  qcardinalityverifier_p.h  qebvextractor_p.h  qitemverifier_p.h  quntypedatomicconverter_p.h
src/xmlpatterns/parser/: qmaintainingreader_p.h  qmaintainingreader_tpl_p.h  qparsercontext_p.h  qquerytransformparser.cpp  qtokenizer_p.h  qtokenrevealer.cpp  qtokenrevealer_p.h  qtokensource_p.h  qtokenvalue_p.h  qxquerytokenizer.cpp  qxquerytokenizer_p.h  qxslttokenizer.cpp  qxslttokenizer_p.h  qxslttokenlookup_p.h
src/xmlpatterns/projection/: qdocumentprojector.cpp  qdocumentprojector_p.h  qprojectedexpression_p.h
src/xmlpatterns/qtokenautomaton/: README  qautomaton2cpp.xsl
src/xmlpatterns/schema/: qnamespacesupport_p.h  qxsdalternative_p.h  qxsdannotated_p.h  qxsdannotation_p.h  qxsdapplicationinformation_p.h  qxsdassertion_p.h  qxsdattribute_p.h  qxsdattributegroup_p.h  qxsdattributereference_p.h  qxsdattributeterm_p.h  qxsdattributeuse_p.h  qxsdcomplextype_p.h  qxsddocumentation_p.h  qxsdelement_p.h  (+44 more)
tests/shared/: util.cpp  util.h
tools/xmlpatterns/: main.cpp  qapplicationargumentparser.cpp
tools/xmlpatternsvalidator/: main.cpp
(+136 files in other folders)
