cmake_minimum_required(VERSION 3.14)

project(qtxmlpatterns LANGUAGES CXX)

# set preferred Qt version, Change it to 5 for compiling with Qt 5 in case both are present
set(PRIM_QT_VER 6)
###########################################################################################
if(NOT Qt5_FOUND AND NOT Qt6_FOUND)
    set(SEC_QT_VER 6)
    if(PRIM_QT_VER EQUAL 6)
        set(SEC_QT_VER 5)
    endif()
    set(QT_VER_FOUND ${PRIM_QT_VER})
    find_package(Qt${PRIM_QT_VER} REQUIRED Core)
    if (NOT Qt${PRIM_QT_VER}_FOUND)
        find_package(Qt${SEC_QT_VER} REQUIRED Core)
        set(QT_VER_FOUND ${SEC_QT_VER})
    endif()
endif()
# set additional required Qt components here
find_package(Qt${QT_VER_FOUND} REQUIRED COMPONENTS Network Xml)
###########################################################################################
message("${PROJECT_NAME}: Building with Qt${QT_VER_FOUND}")

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_library(${PROJECT_NAME} STATIC
  src/xmlpatterns/acceltree/qacceltree.cpp
  src/xmlpatterns/acceltree/qacceltreeresourceloader.cpp
  src/xmlpatterns/acceltree/qacceliterators.cpp
  src/xmlpatterns/acceltree/qcompressedwhitespace.cpp
  src/xmlpatterns/acceltree/qacceltreebuilder_p.h
  src/xmlpatterns/acceltree/qacceltree_p.h
  src/xmlpatterns/acceltree/qacceltreeresourceloader_p.h
  src/xmlpatterns/acceltree/qacceliterators_p.h
  src/xmlpatterns/acceltree/qcompressedwhitespace_p.h

  src/xmlpatterns/api/qabstractxmlforwarditerator_p.h
  src/xmlpatterns/api/qabstractmessagehandler.h
  src/xmlpatterns/api/qabstracturiresolver.h
  src/xmlpatterns/api/qabstractxmlnodemodel.h
  src/xmlpatterns/api/qabstractxmlnodemodel_p.h
  src/xmlpatterns/api/qabstractxmlpullprovider_p.h
  src/xmlpatterns/api/qabstractxmlreceiver.h
  src/xmlpatterns/api/qabstractxmlreceiver_p.h
  src/xmlpatterns/api/qdeviceresourceloader_p.h
  src/xmlpatterns/api/qiodevicedelegate_p.h
  src/xmlpatterns/api/qnetworkaccessdelegator_p.h
  src/xmlpatterns/api/qpullbridge_p.h
  src/xmlpatterns/api/qresourcedelegator_p.h
  src/xmlpatterns/api/qsimplexmlnodemodel.h
  src/xmlpatterns/api/qsourcelocation.h
  src/xmlpatterns/api/qtxmlpatternsglobal.h
  src/xmlpatterns/api/quriloader_p.h
  src/xmlpatterns/api/qvariableloader_p.h
  src/xmlpatterns/api/qxmlformatter.h
  src/xmlpatterns/api/qxmlname.h
  src/xmlpatterns/api/qxmlnamepool.h
  src/xmlpatterns/api/qxmlquery.h
  src/xmlpatterns/api/qxmlquery_p.h
  src/xmlpatterns/api/qxmlresultitems.h
  src/xmlpatterns/api/qxmlresultitems_p.h
  src/xmlpatterns/api/qxmlserializer.h
  src/xmlpatterns/api/qxmlserializer_p.h
  src/xmlpatterns/api/qcoloringmessagehandler_p.h
  src/xmlpatterns/api/qcoloroutput_p.h
  src/xmlpatterns/api/qxmlpatternistcli_p.h
  src/xmlpatterns/api/qvariableloader.cpp
  src/xmlpatterns/api/qabstractmessagehandler.cpp
  src/xmlpatterns/api/qabstracturiresolver.cpp
  src/xmlpatterns/api/qabstractxmlnodemodel.cpp
  src/xmlpatterns/api/qabstractxmlpullprovider.cpp
  src/xmlpatterns/api/qabstractxmlreceiver.cpp
  src/xmlpatterns/api/qiodevicedelegate.cpp
  src/xmlpatterns/api/qnetworkaccessdelegator.cpp
  src/xmlpatterns/api/qpullbridge.cpp
  src/xmlpatterns/api/qresourcedelegator.cpp
  src/xmlpatterns/api/qsimplexmlnodemodel.cpp
  src/xmlpatterns/api/qsourcelocation.cpp
  src/xmlpatterns/api/quriloader.cpp
  src/xmlpatterns/api/qxmlformatter.cpp
  src/xmlpatterns/api/qxmlname.cpp
  src/xmlpatterns/api/qxmlnamepool.cpp
  src/xmlpatterns/api/qxmlquery.cpp
  src/xmlpatterns/api/qxmlresultitems.cpp
  src/xmlpatterns/api/qxmlserializer.cpp
  src/xmlpatterns/api/qcoloringmessagehandler.cpp
  src/xmlpatterns/api/qcoloroutput.cpp
  src/xmlpatterns/api/qxmlschema.h
  src/xmlpatterns/api/qxmlschema_p.h
  src/xmlpatterns/api/qxmlschemavalidator.h
  src/xmlpatterns/api/qxmlschemavalidator_p.h
  src/xmlpatterns/api/qxmlschema.cpp
  src/xmlpatterns/api/qxmlschema_p.cpp
  src/xmlpatterns/api/qxmlschemavalidator.cpp

  src/xmlpatterns/data/qabstractdatetime_p.h
  src/xmlpatterns/data/qabstractduration_p.h
  src/xmlpatterns/data/qabstractfloatcasters_p.h
  src/xmlpatterns/data/qabstractfloatmathematician_p.h
  src/xmlpatterns/data/qabstractfloat_p.h
  src/xmlpatterns/data/qanyuri_p.h
  src/xmlpatterns/data/qatomiccaster_p.h
  src/xmlpatterns/data/qatomiccasters_p.h
  src/xmlpatterns/data/qatomiccomparator_p.h
  src/xmlpatterns/data/qatomiccomparators_p.h
  src/xmlpatterns/data/qatomicmathematician_p.h
  src/xmlpatterns/data/qatomicmathematicians_p.h
  src/xmlpatterns/data/qatomicstring_p.h
  src/xmlpatterns/data/qbase64binary_p.h
  src/xmlpatterns/data/qboolean_p.h
  src/xmlpatterns/data/qcommonvalues_p.h
  src/xmlpatterns/data/qcomparisonfactory_p.h
  src/xmlpatterns/data/qdate_p.h
  src/xmlpatterns/data/qdaytimeduration_p.h
  src/xmlpatterns/data/qdecimal_p.h
  src/xmlpatterns/data/qderivedinteger_p.h
  src/xmlpatterns/data/qderivedstring_p.h
  src/xmlpatterns/data/qduration_p.h
  src/xmlpatterns/data/qgday_p.h
  src/xmlpatterns/data/qgmonthday_p.h
  src/xmlpatterns/data/qgmonth_p.h
  src/xmlpatterns/data/qgyearmonth_p.h
  src/xmlpatterns/data/qgyear_p.h
  src/xmlpatterns/data/qhexbinary_p.h
  src/xmlpatterns/data/qinteger_p.h
  src/xmlpatterns/data/qitem_p.h
  src/xmlpatterns/data/qnodebuilder_p.h
  src/xmlpatterns/data/qqnamevalue_p.h
  src/xmlpatterns/data/qresourceloader_p.h
  src/xmlpatterns/data/qschemadatetime_p.h
  src/xmlpatterns/data/qschemanumeric_p.h
  src/xmlpatterns/data/qschematime_p.h
  src/xmlpatterns/data/qsorttuple.cpp
  src/xmlpatterns/data/quntypedatomic_p.h
  src/xmlpatterns/data/qvalidationerror_p.h
  src/xmlpatterns/data/qvaluefactory_p.h
  src/xmlpatterns/data/qyearmonthduration_p.h
  src/xmlpatterns/data/qabstractdatetime.cpp
  src/xmlpatterns/data/qabstractduration.cpp
  src/xmlpatterns/data/qanyuri.cpp
  src/xmlpatterns/data/qatomiccaster.cpp
  src/xmlpatterns/data/qatomiccasters.cpp
  src/xmlpatterns/data/qatomiccomparator.cpp
  src/xmlpatterns/data/qatomiccomparators.cpp
  src/xmlpatterns/data/qatomicmathematician.cpp
  src/xmlpatterns/data/qatomicmathematicians.cpp
  src/xmlpatterns/data/qatomicstring.cpp
  src/xmlpatterns/data/qatomicvalue.cpp
  src/xmlpatterns/data/qbase64binary.cpp
  src/xmlpatterns/data/qboolean.cpp
  src/xmlpatterns/data/qcommonvalues.cpp
  src/xmlpatterns/data/qcomparisonfactory.cpp
  src/xmlpatterns/data/qdate.cpp
  src/xmlpatterns/data/qdaytimeduration.cpp
  src/xmlpatterns/data/qdecimal.cpp
  src/xmlpatterns/data/qduration.cpp
  src/xmlpatterns/data/qgday.cpp
  src/xmlpatterns/data/qgmonth.cpp
  src/xmlpatterns/data/qgmonthday.cpp
  src/xmlpatterns/data/qgyear.cpp
  src/xmlpatterns/data/qgyearmonth.cpp
  src/xmlpatterns/data/qhexbinary.cpp
  src/xmlpatterns/data/qinteger.cpp
  src/xmlpatterns/data/qitem.cpp
  src/xmlpatterns/data/qnodebuilder.cpp
  src/xmlpatterns/data/qnodemodel.cpp
  src/xmlpatterns/data/qqnamevalue.cpp
  src/xmlpatterns/data/qresourceloader.cpp
  src/xmlpatterns/data/qschemadatetime.cpp
  src/xmlpatterns/data/qschemanumeric.cpp
  src/xmlpatterns/data/qschematime.cpp
  src/xmlpatterns/data/qsorttuple.cpp
  src/xmlpatterns/data/quntypedatomic.cpp
  src/xmlpatterns/data/qvalidationerror.cpp
  src/xmlpatterns/data/qvaluefactory.cpp
  src/xmlpatterns/data/qyearmonthduration.cpp

  src/xmlpatterns/environment/qcurrentitemcontext_p.h
  src/xmlpatterns/environment/qdelegatingdynamiccontext_p.h
  src/xmlpatterns/environment/qdelegatingstaticcontext_p.h
  src/xmlpatterns/environment/qdynamiccontext_p.h
  src/xmlpatterns/environment/qfocus_p.h
  src/xmlpatterns/environment/qgenericdynamiccontext_p.h
  src/xmlpatterns/environment/qgenericstaticcontext_p.h
  src/xmlpatterns/environment/qreceiverdynamiccontext_p.h
  src/xmlpatterns/environment/qreportcontext_p.h
  src/xmlpatterns/environment/qstackcontextbase_p.h
  src/xmlpatterns/environment/qstaticbaseuricontext_p.h
  src/xmlpatterns/environment/qstaticcontext_p.h
  src/xmlpatterns/environment/qstaticcurrentcontext_p.h
  src/xmlpatterns/environment/qstaticfocuscontext_p.h
  src/xmlpatterns/environment/qstaticcompatibilitycontext_p.h
  src/xmlpatterns/environment/qstaticnamespacecontext_p.h
  src/xmlpatterns/environment/qcurrentitemcontext.cpp
  src/xmlpatterns/environment/qdelegatingdynamiccontext.cpp
  src/xmlpatterns/environment/qdelegatingstaticcontext.cpp
  src/xmlpatterns/environment/qdynamiccontext.cpp
  src/xmlpatterns/environment/qfocus.cpp
  src/xmlpatterns/environment/qgenericdynamiccontext.cpp
  src/xmlpatterns/environment/qgenericstaticcontext.cpp
  src/xmlpatterns/environment/qreceiverdynamiccontext.cpp
  src/xmlpatterns/environment/qreportcontext.cpp
  src/xmlpatterns/environment/qstaticbaseuricontext.cpp
  src/xmlpatterns/environment/qstaticcontext.cpp
  src/xmlpatterns/environment/qstaticcurrentcontext.cpp
  src/xmlpatterns/environment/qstaticfocuscontext.cpp
  src/xmlpatterns/environment/qstaticcompatibilitycontext.cpp
  src/xmlpatterns/environment/qstaticnamespacecontext.cpp

  src/xmlpatterns/expr/qandexpression_p.h
  src/xmlpatterns/expr/qapplytemplate_p.h
  src/xmlpatterns/expr/qargumentreference_p.h
  src/xmlpatterns/expr/qarithmeticexpression_p.h
  src/xmlpatterns/expr/qattributeconstructor_p.h
  src/xmlpatterns/expr/qattributenamevalidator_p.h
  src/xmlpatterns/expr/qaxisstep_p.h
  src/xmlpatterns/expr/qcachecells_p.h
  src/xmlpatterns/expr/qcallsite_p.h
  src/xmlpatterns/expr/qcalltargetdescription_p.h
  src/xmlpatterns/expr/qcalltemplate_p.h
  src/xmlpatterns/expr/qcastableas_p.h
  src/xmlpatterns/expr/qcastas_p.h
  src/xmlpatterns/expr/qcastingplatform_p.h
  src/xmlpatterns/expr/qcollationchecker_p.h
  src/xmlpatterns/expr/qcombinenodes_p.h
  src/xmlpatterns/expr/qcommentconstructor_p.h
  src/xmlpatterns/expr/qcomparisonplatform_p.h
  src/xmlpatterns/expr/qcomputednamespaceconstructor_p.h
  src/xmlpatterns/expr/qcontextitem_p.h
  src/xmlpatterns/expr/qcopyof_p.h
  src/xmlpatterns/expr/qcurrentitemstore_p.h
  src/xmlpatterns/expr/qdocumentconstructor_p.h
  src/xmlpatterns/expr/qdocumentcontentvalidator_p.h
  src/xmlpatterns/expr/qdynamiccontextstore_p.h
  src/xmlpatterns/expr/qelementconstructor_p.h
  src/xmlpatterns/expr/qemptycontainer_p.h
  src/xmlpatterns/expr/qemptysequence_p.h
  src/xmlpatterns/expr/qevaluationcache_p.h
  src/xmlpatterns/expr/qexpressiondispatch_p.h
  src/xmlpatterns/expr/qexpressionfactory_p.h
  src/xmlpatterns/expr/qexpression_p.h
  src/xmlpatterns/expr/qexpressionsequence_p.h
  src/xmlpatterns/expr/qexpressionvariablereference_p.h
  src/xmlpatterns/expr/qexternalvariableloader_p.h
  src/xmlpatterns/expr/qexternalvariablereference_p.h
  src/xmlpatterns/expr/qfirstitempredicate_p.h
  src/xmlpatterns/expr/qforclause_p.h
  src/xmlpatterns/expr/qgeneralcomparison_p.h
  src/xmlpatterns/expr/qgenericpredicate_p.h
  src/xmlpatterns/expr/qifthenclause_p.h
  src/xmlpatterns/expr/qinstanceof_p.h
  src/xmlpatterns/expr/qletclause_p.h
  src/xmlpatterns/expr/qliteral_p.h
  src/xmlpatterns/expr/qliteralsequence_p.h
  src/xmlpatterns/expr/qnamespaceconstructor_p.h
  src/xmlpatterns/expr/qncnameconstructor_p.h
  src/xmlpatterns/expr/qnodecomparison_p.h
  src/xmlpatterns/expr/qnodesort_p.h
  src/xmlpatterns/expr/qoperandsiterator_p.h
  src/xmlpatterns/expr/qoptimizationpasses_p.h
  src/xmlpatterns/expr/qoptimizerblocks_p.h
  src/xmlpatterns/expr/qoptimizerframework_p.h
  src/xmlpatterns/expr/qorderby_p.h
  src/xmlpatterns/expr/qorexpression_p.h
  src/xmlpatterns/expr/qpaircontainer_p.h
  src/xmlpatterns/expr/qparentnodeaxis_p.h
  src/xmlpatterns/expr/qpath_p.h
  src/xmlpatterns/expr/qpositionalvariablereference_p.h
  src/xmlpatterns/expr/qprocessinginstructionconstructor_p.h
  src/xmlpatterns/expr/qqnameconstructor_p.h
  src/xmlpatterns/expr/qquantifiedexpression_p.h
  src/xmlpatterns/expr/qrangeexpression_p.h
  src/xmlpatterns/expr/qrangevariablereference_p.h
  src/xmlpatterns/expr/qreturnorderby_p.h
  src/xmlpatterns/expr/qsimplecontentconstructor_p.h
  src/xmlpatterns/expr/qsinglecontainer_p.h
  src/xmlpatterns/expr/qsourcelocationreflection_p.h
  src/xmlpatterns/expr/qstaticbaseuristore_p.h
  src/xmlpatterns/expr/qstaticcompatibilitystore_p.h
  src/xmlpatterns/expr/qtemplatemode_p.h
  src/xmlpatterns/expr/qtemplateparameterreference_p.h
  src/xmlpatterns/expr/qtemplatepattern_p.h
  src/xmlpatterns/expr/qtemplatepattern_p.h
  src/xmlpatterns/expr/qtemplate_p.h
  src/xmlpatterns/expr/qtextnodeconstructor_p.h
  src/xmlpatterns/expr/qtreatas_p.h
  src/xmlpatterns/expr/qtriplecontainer_p.h
  src/xmlpatterns/expr/qtruthpredicate_p.h
  src/xmlpatterns/expr/qunaryexpression_p.h
  src/xmlpatterns/expr/qunlimitedcontainer_p.h
  src/xmlpatterns/expr/qunresolvedvariablereference_p.h
  src/xmlpatterns/expr/quserfunctioncallsite_p.h
  src/xmlpatterns/expr/quserfunction_p.h
  src/xmlpatterns/expr/qvalidate_p.h
  src/xmlpatterns/expr/qvaluecomparison_p.h
  src/xmlpatterns/expr/qvariabledeclaration_p.h
  src/xmlpatterns/expr/qvariablereference_p.h
  src/xmlpatterns/expr/qwithparam_p.h
  src/xmlpatterns/expr/qxsltsimplecontentconstructor_p.h
  src/xmlpatterns/expr/qandexpression.cpp
  src/xmlpatterns/expr/qapplytemplate.cpp
  src/xmlpatterns/expr/qargumentreference.cpp
  src/xmlpatterns/expr/qarithmeticexpression.cpp
  src/xmlpatterns/expr/qattributeconstructor.cpp
  src/xmlpatterns/expr/qattributenamevalidator.cpp
  src/xmlpatterns/expr/qaxisstep.cpp
  src/xmlpatterns/expr/qcallsite.cpp
  src/xmlpatterns/expr/qcalltargetdescription.cpp
  src/xmlpatterns/expr/qcalltemplate.cpp
  src/xmlpatterns/expr/qcastableas.cpp
  src/xmlpatterns/expr/qcastas.cpp
  src/xmlpatterns/expr/qcollationchecker.cpp
  src/xmlpatterns/expr/qcombinenodes.cpp
  src/xmlpatterns/expr/qcommentconstructor.cpp
  src/xmlpatterns/expr/qcomputednamespaceconstructor.cpp
  src/xmlpatterns/expr/qcontextitem.cpp
  src/xmlpatterns/expr/qcopyof.cpp
  src/xmlpatterns/expr/qcurrentitemstore.cpp
  src/xmlpatterns/expr/qdocumentconstructor.cpp
  src/xmlpatterns/expr/qdocumentcontentvalidator.cpp
  src/xmlpatterns/expr/qdynamiccontextstore.cpp
  src/xmlpatterns/expr/qelementconstructor.cpp
  src/xmlpatterns/expr/qemptycontainer.cpp
  src/xmlpatterns/expr/qemptysequence.cpp
  src/xmlpatterns/expr/qexpression.cpp
  src/xmlpatterns/expr/qexpressionfactory.cpp
  src/xmlpatterns/expr/qexpressionsequence.cpp
  src/xmlpatterns/expr/qexpressionvariablereference.cpp
  src/xmlpatterns/expr/qexternalvariableloader.cpp
  src/xmlpatterns/expr/qexternalvariablereference.cpp
  src/xmlpatterns/expr/qfirstitempredicate.cpp
  src/xmlpatterns/expr/qforclause.cpp
  src/xmlpatterns/expr/qgeneralcomparison.cpp
  src/xmlpatterns/expr/qgenericpredicate.cpp
  src/xmlpatterns/expr/qifthenclause.cpp
  src/xmlpatterns/expr/qinstanceof.cpp
  src/xmlpatterns/expr/qletclause.cpp
  src/xmlpatterns/expr/qliteral.cpp
  src/xmlpatterns/expr/qliteralsequence.cpp
  src/xmlpatterns/expr/qnamespaceconstructor.cpp
  src/xmlpatterns/expr/qncnameconstructor.cpp
  src/xmlpatterns/expr/qnodecomparison.cpp
  src/xmlpatterns/expr/qnodesort.cpp
  src/xmlpatterns/expr/qoptimizationpasses.cpp
  src/xmlpatterns/expr/qoptimizerblocks.cpp
  src/xmlpatterns/expr/qoptimizerframework.cpp
  src/xmlpatterns/expr/qorderby.cpp
  src/xmlpatterns/expr/qorexpression.cpp
  src/xmlpatterns/expr/qpaircontainer.cpp
  src/xmlpatterns/expr/qparentnodeaxis.cpp
  src/xmlpatterns/expr/qpath.cpp
  src/xmlpatterns/expr/qpositionalvariablereference.cpp
  src/xmlpatterns/expr/qprocessinginstructionconstructor.cpp
  src/xmlpatterns/expr/qqnameconstructor.cpp
  src/xmlpatterns/expr/qquantifiedexpression.cpp
  src/xmlpatterns/expr/qrangeexpression.cpp
  src/xmlpatterns/expr/qrangevariablereference.cpp
  src/xmlpatterns/expr/qreturnorderby.cpp
  src/xmlpatterns/expr/qsimplecontentconstructor.cpp
  src/xmlpatterns/expr/qsinglecontainer.cpp
  src/xmlpatterns/expr/qsourcelocationreflection.cpp
  src/xmlpatterns/expr/qstaticbaseuristore.cpp
  src/xmlpatterns/expr/qstaticcompatibilitystore.cpp
  src/xmlpatterns/expr/qtemplate.cpp
  src/xmlpatterns/expr/qtemplateinvoker.cpp
  src/xmlpatterns/expr/qtemplatemode.cpp
  src/xmlpatterns/expr/qtemplateparameterreference.cpp
  src/xmlpatterns/expr/qtextnodeconstructor.cpp
  src/xmlpatterns/expr/qtreatas.cpp
  src/xmlpatterns/expr/qtriplecontainer.cpp
  src/xmlpatterns/expr/qtruthpredicate.cpp
  src/xmlpatterns/expr/qunaryexpression.cpp
  src/xmlpatterns/expr/qunlimitedcontainer.cpp
  src/xmlpatterns/expr/qunresolvedvariablereference.cpp
  src/xmlpatterns/expr/quserfunctioncallsite.cpp
  src/xmlpatterns/expr/quserfunction.cpp
  src/xmlpatterns/expr/qvalidate.cpp
  src/xmlpatterns/expr/qvaluecomparison.cpp
  src/xmlpatterns/expr/qvariabledeclaration.cpp
  src/xmlpatterns/expr/qvariablereference.cpp
  src/xmlpatterns/expr/qxsltsimplecontentconstructor.cpp

  src/xmlpatterns/functions/qabstractfunctionfactory_p.h
  src/xmlpatterns/functions/qaccessorfns_p.h
  src/xmlpatterns/functions/qaggregatefns_p.h
  src/xmlpatterns/functions/qaggregator_p.h
  src/xmlpatterns/functions/qassemblestringfns_p.h
  src/xmlpatterns/functions/qbooleanfns_p.h
  src/xmlpatterns/functions/qcomparescaseaware_p.h
  src/xmlpatterns/functions/qcomparestringfns_p.h
  src/xmlpatterns/functions/qcomparingaggregator_p.h
  src/xmlpatterns/functions/qconstructorfunctionsfactory_p.h
  src/xmlpatterns/functions/qcontextfns_p.h
  src/xmlpatterns/functions/qcurrentfn_p.h
  src/xmlpatterns/functions/qdatetimefn_p.h
  src/xmlpatterns/functions/qdatetimefns_p.h
  src/xmlpatterns/functions/qdeepequalfn_p.h
  src/xmlpatterns/functions/qdocumentfn_p.h
  src/xmlpatterns/functions/qelementavailablefn_p.h
  src/xmlpatterns/functions/qerrorfn_p.h
  src/xmlpatterns/functions/qfunctionargument_p.h
  src/xmlpatterns/functions/qfunctionavailablefn_p.h
  src/xmlpatterns/functions/qfunctioncall_p.h
  src/xmlpatterns/functions/qfunctionfactorycollection_p.h
  src/xmlpatterns/functions/qfunctionfactory_p.h
  src/xmlpatterns/functions/qfunctionsignature_p.h
  src/xmlpatterns/functions/qgenerateidfn_p.h
  src/xmlpatterns/functions/qnodefns_p.h
  src/xmlpatterns/functions/qnumericfns_p.h
  src/xmlpatterns/functions/qpatternmatchingfns_p.h
  src/xmlpatterns/functions/qpatternplatform_p.h
  src/xmlpatterns/functions/qqnamefns_p.h
  src/xmlpatterns/functions/qresolveurifn_p.h
  src/xmlpatterns/functions/qsequencefns_p.h
  src/xmlpatterns/functions/qsequencegeneratingfns_p.h
  src/xmlpatterns/functions/qstaticbaseuricontainer_p.h
  src/xmlpatterns/functions/qstaticnamespacescontainer_p.h
  src/xmlpatterns/functions/qstringvaluefns_p.h
  src/xmlpatterns/functions/qsubstringfns_p.h
  src/xmlpatterns/functions/qsystempropertyfn_p.h
  src/xmlpatterns/functions/qtimezonefns_p.h
  src/xmlpatterns/functions/qtracefn_p.h
  src/xmlpatterns/functions/qtypeavailablefn_p.h
  src/xmlpatterns/functions/qunparsedentitypublicidfn_p.h
  src/xmlpatterns/functions/qunparsedentityurifn_p.h
  src/xmlpatterns/functions/qunparsedtextavailablefn_p.h
  src/xmlpatterns/functions/qunparsedtextfn_p.h
  src/xmlpatterns/functions/qcontextnodechecker_p.h
  src/xmlpatterns/functions/qxpath10corefunctions_p.h
  src/xmlpatterns/functions/qxpath20corefunctions_p.h
  src/xmlpatterns/functions/qxslt20corefunctions_p.h
  src/xmlpatterns/functions/qabstractfunctionfactory.cpp
  src/xmlpatterns/functions/qaccessorfns.cpp
  src/xmlpatterns/functions/qaggregatefns.cpp
  src/xmlpatterns/functions/qaggregator.cpp
  src/xmlpatterns/functions/qassemblestringfns.cpp
  src/xmlpatterns/functions/qbooleanfns.cpp
  src/xmlpatterns/functions/qcomparescaseaware.cpp
  src/xmlpatterns/functions/qcomparestringfns.cpp
  src/xmlpatterns/functions/qconstructorfunctionsfactory.cpp
  src/xmlpatterns/functions/qcontextfns.cpp
  src/xmlpatterns/functions/qcontextnodechecker.cpp
  src/xmlpatterns/functions/qcurrentfn.cpp
  src/xmlpatterns/functions/qdatetimefn.cpp
  src/xmlpatterns/functions/qdeepequalfn.cpp
  src/xmlpatterns/functions/qdocumentfn.cpp
  src/xmlpatterns/functions/qelementavailablefn.cpp
  src/xmlpatterns/functions/qerrorfn.cpp
  src/xmlpatterns/functions/qfunctionargument.cpp
  src/xmlpatterns/functions/qfunctionavailablefn.cpp
  src/xmlpatterns/functions/qfunctioncall.cpp
  src/xmlpatterns/functions/qfunctionfactorycollection.cpp
  src/xmlpatterns/functions/qfunctionfactory.cpp
  src/xmlpatterns/functions/qfunctionsignature.cpp
  src/xmlpatterns/functions/qgenerateidfn.cpp
  src/xmlpatterns/functions/qnodefns.cpp
  src/xmlpatterns/functions/qnumericfns.cpp
  src/xmlpatterns/functions/qpatternmatchingfns.cpp
  src/xmlpatterns/functions/qpatternplatform.cpp
  src/xmlpatterns/functions/qqnamefns.cpp
  src/xmlpatterns/functions/qresolveurifn.cpp
  src/xmlpatterns/functions/qsequencefns.cpp
  src/xmlpatterns/functions/qsequencegeneratingfns.cpp
  src/xmlpatterns/functions/qstaticnamespacescontainer.cpp
  src/xmlpatterns/functions/qstringvaluefns.cpp
  src/xmlpatterns/functions/qsubstringfns.cpp
  src/xmlpatterns/functions/qsystempropertyfn.cpp
  src/xmlpatterns/functions/qtimezonefns.cpp
  src/xmlpatterns/functions/qtracefn.cpp
  src/xmlpatterns/functions/qtypeavailablefn.cpp
  src/xmlpatterns/functions/qunparsedentitypublicidfn.cpp
  src/xmlpatterns/functions/qunparsedentityurifn.cpp
  src/xmlpatterns/functions/qunparsedtextavailablefn.cpp
  src/xmlpatterns/functions/qunparsedtextfn.cpp
  src/xmlpatterns/functions/qxpath10corefunctions.cpp
  src/xmlpatterns/functions/qxpath20corefunctions.cpp
  src/xmlpatterns/functions/qxslt20corefunctions.cpp

  src/xmlpatterns/iterators/qcachingiterator_p.h
  src/xmlpatterns/iterators/qdeduplicateiterator_p.h
  src/xmlpatterns/iterators/qdistinctiterator_p.h
  src/xmlpatterns/iterators/qemptyiterator_p.h
  src/xmlpatterns/iterators/qexceptiterator_p.h
  src/xmlpatterns/iterators/qindexofiterator_p.h
  src/xmlpatterns/iterators/qinsertioniterator_p.h
  src/xmlpatterns/iterators/qintersectiterator_p.h
  src/xmlpatterns/iterators/qitemmappingiterator_p.h
  src/xmlpatterns/iterators/qrangeiterator_p.h
  src/xmlpatterns/iterators/qremovaliterator_p.h
  src/xmlpatterns/iterators/qsequencemappingiterator_p.h
  src/xmlpatterns/iterators/qsingletoniterator_p.h
  src/xmlpatterns/iterators/qsubsequenceiterator_p.h
  src/xmlpatterns/iterators/qtocodepointsiterator_p.h
  src/xmlpatterns/iterators/qunioniterator_p.h
  src/xmlpatterns/iterators/qcachingiterator.cpp
  src/xmlpatterns/iterators/qdeduplicateiterator.cpp
  src/xmlpatterns/iterators/qdistinctiterator.cpp
  src/xmlpatterns/iterators/qexceptiterator.cpp
  src/xmlpatterns/iterators/qindexofiterator.cpp
  src/xmlpatterns/iterators/qinsertioniterator.cpp
  src/xmlpatterns/iterators/qintersectiterator.cpp
  src/xmlpatterns/iterators/qrangeiterator.cpp
  src/xmlpatterns/iterators/qremovaliterator.cpp
  src/xmlpatterns/iterators/qsubsequenceiterator.cpp
  src/xmlpatterns/iterators/qtocodepointsiterator.cpp
  src/xmlpatterns/iterators/qunioniterator.cpp

  src/xmlpatterns/janitors/qargumentconverter_p.h
  src/xmlpatterns/janitors/qatomizer_p.h
  src/xmlpatterns/janitors/qcardinalityverifier_p.h
  src/xmlpatterns/janitors/qebvextractor_p.h
  src/xmlpatterns/janitors/qitemverifier_p.h
  src/xmlpatterns/janitors/quntypedatomicconverter_p.h
  src/xmlpatterns/janitors/qargumentconverter.cpp
  src/xmlpatterns/janitors/qatomizer.cpp
  src/xmlpatterns/janitors/qcardinalityverifier.cpp
  src/xmlpatterns/janitors/qebvextractor.cpp
  src/xmlpatterns/janitors/qitemverifier.cpp
  src/xmlpatterns/janitors/quntypedatomicconverter.cpp

  src/xmlpatterns/parser/qparsercontext_p.h
  src/xmlpatterns/parser/qmaintainingreader_p.h
  src/xmlpatterns/parser/qquerytransformparser_p.h
  src/xmlpatterns/parser/qtokenizer_p.h
  src/xmlpatterns/parser/qtokenrevealer_p.h
  src/xmlpatterns/parser/qtokensource_p.h
  src/xmlpatterns/parser/qtokenvalue_p.h
  src/xmlpatterns/parser/qxquerytokenizer_p.h
  src/xmlpatterns/parser/qxslttokenizer_p.h
  src/xmlpatterns/parser/qxslttokenlookup_p.h
  src/xmlpatterns/parser/qquerytransformparser.cpp
  src/xmlpatterns/parser/qparsercontext.cpp
  src/xmlpatterns/parser/qtokenrevealer.cpp
  src/xmlpatterns/parser/qtokensource.cpp
  src/xmlpatterns/parser/qxquerytokenizer.cpp
  src/xmlpatterns/parser/qxslttokenizer.cpp
  src/xmlpatterns/parser/qxslttokenlookup.cpp

  src/xmlpatterns/projection/qdocumentprojector.cpp
  src/xmlpatterns/projection/qdocumentprojector_p.h
  src/xmlpatterns/projection/qprojectedexpression_p.h

  src/xmlpatterns/schema/qnamespacesupport_p.h
  src/xmlpatterns/schema/qxsdalternative_p.h
  src/xmlpatterns/schema/qxsdannotated_p.h
  src/xmlpatterns/schema/qxsdannotation_p.h
  src/xmlpatterns/schema/qxsdapplicationinformation_p.h
  src/xmlpatterns/schema/qxsdassertion_p.h
  src/xmlpatterns/schema/qxsdattribute_p.h
  src/xmlpatterns/schema/qxsdattributereference_p.h
  src/xmlpatterns/schema/qxsdattributeterm_p.h
  src/xmlpatterns/schema/qxsdattributeuse_p.h
  src/xmlpatterns/schema/qxsdattributegroup_p.h
  src/xmlpatterns/schema/qxsdcomplextype_p.h
  src/xmlpatterns/schema/qxsddocumentation_p.h
  src/xmlpatterns/schema/qxsdelement_p.h
  src/xmlpatterns/schema/qxsdfacet_p.h
  src/xmlpatterns/schema/qxsdidcache_p.h
  src/xmlpatterns/schema/qxsdidchelper_p.h
  src/xmlpatterns/schema/qxsdidentityconstraint_p.h
  src/xmlpatterns/schema/qxsdinstancereader_p.h
  src/xmlpatterns/schema/qxsdmodelgroup_p.h
  src/xmlpatterns/schema/qxsdnotation_p.h
  src/xmlpatterns/schema/qxsdparticle_p.h
  src/xmlpatterns/schema/qxsdparticlechecker_p.h
  src/xmlpatterns/schema/qxsdreference_p.h
  src/xmlpatterns/schema/qxsdsimpletype_p.h
  src/xmlpatterns/schema/qxsdschema_p.h
  src/xmlpatterns/schema/qxsdschemachecker_p.h
  src/xmlpatterns/schema/qxsdschemacontext_p.h
  src/xmlpatterns/schema/qxsdschemadebugger_p.h
  src/xmlpatterns/schema/qxsdschemahelper_p.h
  src/xmlpatterns/schema/qxsdschemamerger_p.h
  src/xmlpatterns/schema/qxsdschemaparser_p.h
  src/xmlpatterns/schema/qxsdschemaparsercontext_p.h
  src/xmlpatterns/schema/qxsdschemaresolver_p.h
  src/xmlpatterns/schema/qxsdschematoken_p.h
  src/xmlpatterns/schema/qxsdschematypesfactory_p.h
  src/xmlpatterns/schema/qxsdstatemachine_p.h
  src/xmlpatterns/schema/qxsdstatemachinebuilder_p.h
  src/xmlpatterns/schema/qxsdterm_p.h
  src/xmlpatterns/schema/qxsdtypechecker_p.h
  src/xmlpatterns/schema/qxsduserschematype_p.h
  src/xmlpatterns/schema/qxsdvalidatedxmlnodemodel_p.h
  src/xmlpatterns/schema/qxsdvalidatinginstancereader_p.h
  src/xmlpatterns/schema/qxsdwildcard_p.h
  src/xmlpatterns/schema/qxsdxpathexpression_p.h
  src/xmlpatterns/schema/qnamespacesupport.cpp
  src/xmlpatterns/schema/qxsdalternative.cpp
  src/xmlpatterns/schema/qxsdannotated.cpp
  src/xmlpatterns/schema/qxsdannotation.cpp
  src/xmlpatterns/schema/qxsdapplicationinformation.cpp
  src/xmlpatterns/schema/qxsdassertion.cpp
  src/xmlpatterns/schema/qxsdattribute.cpp
  src/xmlpatterns/schema/qxsdattributereference.cpp
  src/xmlpatterns/schema/qxsdattributeterm.cpp
  src/xmlpatterns/schema/qxsdattributeuse.cpp
  src/xmlpatterns/schema/qxsdattributegroup.cpp
  src/xmlpatterns/schema/qxsdcomplextype.cpp
  src/xmlpatterns/schema/qxsddocumentation.cpp
  src/xmlpatterns/schema/qxsdelement.cpp
  src/xmlpatterns/schema/qxsdfacet.cpp
  src/xmlpatterns/schema/qxsdidcache.cpp
  src/xmlpatterns/schema/qxsdidchelper.cpp
  src/xmlpatterns/schema/qxsdidentityconstraint.cpp
  src/xmlpatterns/schema/qxsdinstancereader.cpp
  src/xmlpatterns/schema/qxsdmodelgroup.cpp
  src/xmlpatterns/schema/qxsdnotation.cpp
  src/xmlpatterns/schema/qxsdparticle.cpp
  src/xmlpatterns/schema/qxsdparticlechecker.cpp
  src/xmlpatterns/schema/qxsdreference.cpp
  src/xmlpatterns/schema/qxsdsimpletype.cpp
  src/xmlpatterns/schema/qxsdschema.cpp
  src/xmlpatterns/schema/qxsdschemachecker.cpp
  src/xmlpatterns/schema/qxsdschemachecker_setup.cpp
  src/xmlpatterns/schema/qxsdschemacontext.cpp
  src/xmlpatterns/schema/qxsdschemadebugger.cpp
  src/xmlpatterns/schema/qxsdschemahelper.cpp
  src/xmlpatterns/schema/qxsdschemamerger.cpp
  src/xmlpatterns/schema/qxsdschemaparser.cpp
  src/xmlpatterns/schema/qxsdschemaparser_setup.cpp
  src/xmlpatterns/schema/qxsdschemaparsercontext.cpp
  src/xmlpatterns/schema/qxsdschemaresolver.cpp
  src/xmlpatterns/schema/qxsdschematoken.cpp
  src/xmlpatterns/schema/qxsdschematypesfactory.cpp
  src/xmlpatterns/schema/qxsdstatemachinebuilder.cpp
  src/xmlpatterns/schema/qxsdterm.cpp
  src/xmlpatterns/schema/qxsdtypechecker.cpp
  src/xmlpatterns/schema/qxsdwildcard.cpp
  src/xmlpatterns/schema/qxsdvalidatedxmlnodemodel.cpp
  src/xmlpatterns/schema/qxsdvalidatinginstancereader.cpp
  src/xmlpatterns/schema/qxsdxpathexpression.cpp

  src/xmlpatterns/type/qabstractnodetest_p.h
  src/xmlpatterns/type/qanyitemtype_p.h
  src/xmlpatterns/type/qanynodetype_p.h
  src/xmlpatterns/type/qanysimpletype_p.h
  src/xmlpatterns/type/qanytype_p.h
  src/xmlpatterns/type/qatomiccasterlocator_p.h
  src/xmlpatterns/type/qatomiccasterlocators_p.h
  src/xmlpatterns/type/qatomiccomparatorlocator_p.h
  src/xmlpatterns/type/qatomiccomparatorlocators_p.h
  src/xmlpatterns/type/qatomicmathematicianlocator_p.h
  src/xmlpatterns/type/qatomicmathematicianlocators_p.h
  src/xmlpatterns/type/qatomictypedispatch_p.h
  src/xmlpatterns/type/qatomictype_p.h
  src/xmlpatterns/type/qbasictypesfactory_p.h
  src/xmlpatterns/type/qbuiltinatomictype_p.h
  src/xmlpatterns/type/qbuiltinatomictypes_p.h
  src/xmlpatterns/type/qbuiltinnodetype_p.h
  src/xmlpatterns/type/qbuiltintypes_p.h
  src/xmlpatterns/type/qcardinality_p.h
  src/xmlpatterns/type/qcommonsequencetypes_p.h
  src/xmlpatterns/type/qebvtype_p.h
  src/xmlpatterns/type/qemptysequencetype_p.h
  src/xmlpatterns/type/qgenericsequencetype_p.h
  src/xmlpatterns/type/qitemtype_p.h
  src/xmlpatterns/type/qlocalnametest_p.h
  src/xmlpatterns/type/qmultiitemtype_p.h
  src/xmlpatterns/type/qnamedschemacomponent_p.h
  src/xmlpatterns/type/qnamespacenametest_p.h
  src/xmlpatterns/type/qnonetype_p.h
  src/xmlpatterns/type/qnumerictype_p.h
  src/xmlpatterns/type/qprimitives_p.h
  src/xmlpatterns/type/qqnametest_p.h
  src/xmlpatterns/type/qschemacomponent_p.h
  src/xmlpatterns/type/qschematypefactory_p.h
  src/xmlpatterns/type/qschematype_p.h
  src/xmlpatterns/type/qsequencetype_p.h
  src/xmlpatterns/type/qtypechecker_p.h
  src/xmlpatterns/type/quntyped_p.h
  src/xmlpatterns/type/qxsltnodetest_p.h
  src/xmlpatterns/type/qabstractnodetest.cpp
  src/xmlpatterns/type/qanyitemtype.cpp
  src/xmlpatterns/type/qanynodetype.cpp
  src/xmlpatterns/type/qanysimpletype.cpp
  src/xmlpatterns/type/qanytype.cpp
  src/xmlpatterns/type/qatomiccasterlocator.cpp
  src/xmlpatterns/type/qatomiccomparatorlocator.cpp
  src/xmlpatterns/type/qatomicmathematicianlocator.cpp
  src/xmlpatterns/type/qatomictype.cpp
  src/xmlpatterns/type/qbasictypesfactory.cpp
  src/xmlpatterns/type/qbuiltinatomictype.cpp
  src/xmlpatterns/type/qbuiltinatomictypes.cpp
  src/xmlpatterns/type/qcardinality.cpp
  src/xmlpatterns/type/qcommonsequencetypes.cpp
  src/xmlpatterns/type/qebvtype.cpp
  src/xmlpatterns/type/qemptysequencetype.cpp
  src/xmlpatterns/type/qgenericsequencetype.cpp
  src/xmlpatterns/type/qitemtype.cpp
  src/xmlpatterns/type/qlocalnametest.cpp
  src/xmlpatterns/type/qmultiitemtype.cpp
  src/xmlpatterns/type/qnamedschemacomponent.cpp
  src/xmlpatterns/type/qnamespacenametest.cpp
  src/xmlpatterns/type/qnonetype.cpp
  src/xmlpatterns/type/qnumerictype.cpp
  src/xmlpatterns/type/qqnametest.cpp
  src/xmlpatterns/type/qschemacomponent.cpp
  src/xmlpatterns/type/qschematype.cpp
  src/xmlpatterns/type/qschematypefactory.cpp
  src/xmlpatterns/type/qsequencetype.cpp
  src/xmlpatterns/type/qtypechecker.cpp
  src/xmlpatterns/type/quntyped.cpp
  src/xmlpatterns/type/qxsltnodetest.cpp

  src/xmlpatterns/utils/qautoptr_p.h
  src/xmlpatterns/utils/qcommonnamespaces_p.h
  src/xmlpatterns/utils/qcppcastinghelper_p.h
  src/xmlpatterns/utils/qxmldebug_p.h
  src/xmlpatterns/utils/qgenericnamespaceresolver_p.h
  src/xmlpatterns/utils/qpatternistlocale_p.h
  src/xmlpatterns/utils/qnamepool_p.h
  src/xmlpatterns/utils/qnamespaceresolver_p.h
  src/xmlpatterns/utils/qoutputvalidator_p.h
  src/xmlpatterns/utils/qxpathhelper_p.h
  src/xmlpatterns/utils/qdelegatingnamespaceresolver_p.h
  src/xmlpatterns/utils/qnodenamespaceresolver_p.h
  src/xmlpatterns/utils/qgenericnamespaceresolver.cpp
  src/xmlpatterns/utils/qpatternistlocale.cpp
  src/xmlpatterns/utils/qnamepool.cpp
  src/xmlpatterns/utils/qnamespaceresolver.cpp
  src/xmlpatterns/utils/qoutputvalidator.cpp
  src/xmlpatterns/utils/qxpathhelper.cpp
  src/xmlpatterns/utils/qdelegatingnamespaceresolver.cpp
  src/xmlpatterns/utils/qnodenamespaceresolver.cpp
)

qt_add_resources(${PROJECT_NAME} src/xmlpatterns/schema/builtinschemas.qrc)

install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

target_link_libraries(${PROJECT_NAME} PRIVATE Qt::Core Qt::Network Qt::Xml Qt::CorePrivate)

target_compile_definitions(${PROJECT_NAME} PRIVATE
    QT_NO_USING_NAMESPACE
    QT_ENABLE_QEXPLICITLYSHAREDDATAPOINTER_STATICCAST
)

if(MSVC OR CMAKE_CXX_COMPILER_ID MATCHES "Intel")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /BASE:0x61000000")
endif()

# Handle compiler flags for hpux-g++
if(CMAKE_SYSTEM_NAME STREQUAL "HP-UX" AND CMAKE_CXX_COMPILER_ID STREQUAL "HP")
    add_compile_options(-mbig-switch)
endif()

add_definitions(-DYYLTYPE_IS_DECLARED=1)

target_include_directories(${PROJECT_NAME} PRIVATE
  src/xmlpatterns/acceltree
  src/xmlpatterns/api
  src/xmlpatterns/data
  src/xmlpatterns/environment
  src/xmlpatterns/expr
  src/xmlpatterns/functions
  src/xmlpatterns/iterators
  src/xmlpatterns/janitors
  src/xmlpatterns/parser
  src/xmlpatterns/projection
  src/xmlpatterns/schema
  src/xmlpatterns/type
  src/xmlpatterns/utils
  src/xmlpatterns/qobjectmodel
)
